--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,25 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.footer {
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+}
+
+.footer-company {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.footer-logo-wrapper {
+  margin-top: .45%;
+}
